# yt4

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  NUMBERS.md  README.md  SKILL.md  Taskfile.yml  biome.json  codd.yaml  index.ts  package.json  progresstoday.md  pyproject.toml  tsconfig.json
.github/workflows/: daily_campaign.yml
assets/: GEMINI.md
assets/007_midnight_office_kafka/: 0001_session-kutv1.json
assets/008_yandere_maid_management/: 0000_config.json  0001_situation.json  config.json
assets/009_tsundere_kafka_maid/: 0001_situation.json  0002_session-c2ys3o.json  config.json
assets/010_devoted_maid_lilia/: 0000_config.json  0001_session-r2m4pa.json  0001_session-r2m4pa.vtt  0017_session-kf42n.json  0017_session-kf42n.vtt  0017_session-kf42n_CONTRACT.json  0017_session-kf42n_UPLOAD.json  audit.jsonl  generated_script.json
assets/010_morning_voice/: 0000_config.json  0001_situation.json  0002_session-fdi5u.json
assets/011_cute_voice/: 0000_config.json  0001_situation.json  0002_session-9bygi6.json  0002_session-koyfbp.json  0002_session-koyfbp.vtt  0003_session-rjqphr.json  0003_session-rjqphr.vtt  ps.txt
assets/011_repair_test/: audit.jsonl
assets/012_best_morning_voice/: 0000_config.json  0001_situation.json  0002_session-uu1yug.json  0002_session-uu1yug.vtt  0004_session-m16rs3.json  (+2 more)
campaigns/: daily_situation_voice_campaign.json
codd/: codd.yaml
config/: default.yaml
data/: comfort_interface_test.db
docs/: AUDIT_SYSTEM.md  README.md  daily_campaign.md
src/: publish_manual.ts  run_campaign.ts  update_metadata.ts
(+222 files in other folders)
